Update html and css.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <title>Desafio 002 - Flexbox</title>
     </head>
     <body>
-        <main id="container">
+        <main class="container">
             <header>
-                <nav id="menu">
+                <div class="menu-logo">
+                    <img src="https://picsum.photos/60" alt="logo">
+                </div>    
+                <nav class="menu-nav">
                     <ul>
                         <li><a href="#">home</a></li>
                         <li><a href="#">sobre</a></li>
@@ -18,9 +21,44 @@
                         <li><a href="#">contato</a></li>
                     </ul>
                 </nav>
-                <h1>Seja Bem Vindo!</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit hic eligendi nemo nihil a! Deserunt, perferendis. Nulla architecto illo perspiciatis deserunt vel, possimus fugiat molestias totam nam eius non aspernatur!</p>
+                <div class="menu-header">
+                    <div class="menu-header-img">
+                        <img src="https://picsum.photos/1200" alt="logo">
+                    </div>
+                    <h1>Seja Bem Vindo!</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit hic eligendi nemo nihil a! Deserunt, perferendis. Nulla architecto illo perspiciatis deserunt vel, possimus fugiat molestias totam nam eius non aspernatur!</p>
+                </div>    
             </header>
+
+            <section class="tres-img-h2-p">
+                <div class="tres-img">
+                    <img src="https://picsum.photos/280">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui sequi eius mollitia necessitatibus temporibus, perspiciatis blanditiis maxime atque et voluptate eligendi unde cum repellat sapiente soluta doloribus quasi quos. Dolorem.</p>                   
+                    
+                    <img src="https://picsum.photos/280">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui sequi eius mollitia necessitatibus temporibus, perspiciatis blanditiis maxime atque et voluptate eligendi unde cum repellat sapiente soluta doloribus quasi quos. Dolorem.</p>                   
+                    
+                    <img src="https://picsum.photos/280">
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui sequi eius mollitia necessitatibus temporibus, perspiciatis blanditiis maxime atque et voluptate eligendi unde cum repellat sapiente soluta doloribus quasi quos. Dolorem.</p>                
+                </div>
+            </section>
+
+            <section class="h2-p">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            </section>
+
+            <section class="img-text">
+                <img src="https://picsum.photos/250">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+
+                <img src="https://picsum.photos/250">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            </section>
+
+            <footer>Desenvolvido por Rafael Martins usando flexbox. | 2021</footer>
         </main>
     </body>
 </html>
